keycloak/themes/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-themes
  labels:
    app: keycloak-themes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-themes
  template:
    metadata:
      labels:
        app: keycloak-themes
    spec:
      containers:
        - name: keycloak-themes
          image: dankirkpatrick/keycloak-theme:latest
          ports:
            - containerPort: 80
