keycloak/themes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-themes
spec:
  selector:
    app: keycloak-themes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
